--- a/Practica/memoria/memoria.tex
+++ b/Practica/memoria/memoria.tex
@@ -61,6 +61,19 @@
 
   \section{Introducción}
 
+En esta primera práctica se aborda la implementación de un \textbf{sistema de producción} (\textit{SP}) en CLIPS que lleve a cabo la ejecución de una sesión de un especialista con un paciente en la que interactúan un humano y un robot, donde este último adopta el papel de especialista.
+
+\vspace{2mm}
+
+En concreto, se crea un \textit{SP} con toda la información respecto a los personajes y el entorno en el que se lleva a cabo la interacción, así como posibles desviaciones durante la sesión en las que el robot debe reaccionar y modificar sus acciones en consecuencia.
+
+\vspace{2mm}
+
+La interacción entre el paciente y el robot se realiza a través del desarrollo de 2 juegos: el \textbf{Twister} y las \textbf{3 en raya}. Además, el sistema está adecuado para tratar con pacientes que puedan presentar 2 personalidades distintas, además del comportamiento base: \textbf{despistado} y \textbf{energético}.
+
+\vspace{2mm}
+
+El documento consiste en el manual técnico con la descripción de la implementación, el manual de usuario con la explicación de cómo usar el programa, las pruebas realizadas y el análisis de los resultados, y para finalizar una serie de conclusiones y comentarios personales.
 
   \section{Manual técnico}
 
